# skillprism

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  devenv.nix  devenv.yaml
.constitution/architecture/: changelog.md  containers.md  resilience.md  risks.md  strategy.md
.constitution/architecture/flows/: flow-build-project.md  flow-builtin-harness.md  flow-compile-template.md  flow-copy-assets.md  flow-deploy-user.md  flow-diff-output.md  flow-fail-on-error.md  flow-generate-manifest.md  flow-generate-sidecar.md  flow-merge-variables.md  flow-override-harness.md  flow-validate.md
.constitution/prd/: actors.md  capabilities.md  changelog.md  constraints.md  domain-model.md  glossary.md  vision.md
.constitution/prd/out-of-scope/: llm-assisted-authoring.md  plugin-marketplace.md  prebuilt-binaries.md  runtime-skill-loading.md  template-testing-framework.md  variable-schema-enforcement.md
.constitution/spikes/: SPK-CLEAN-G006.md  SPK-DIST-I001.md
.constitution/tasks/: changelog.md  critical-path.md
.constitution/tasks/active/: EPIC-A-foundation.md  EPIC-B-pipeline.md  EPIC-C-developer-experience.md  EPIC-D-safety.md  EPIC-E-scaffolding.md  EPIC-F-testing.md  EPIC-G-code-quality.md  EPIC-H-release-readiness.md  EPIC-I-distribution.md
.constitution/tasks/completed/: EPIC-C-developer-experience.md  EPIC-E-scaffolding.md  EPIC-F-testing.md  EPIC-I-distribution.md
.constitution/tech-spec/: changelog.md  guidelines.md  stack.md
.constitution/tech-spec/adrs/: ADR-001-rust-language.md  ADR-002-minijinja.md  ADR-003-single-crate.md  ADR-004-synchronous-pipeline.md  (+4 more)
.github/workflows/: ci.yml  deploy-site.yml  release.yml
examples/: README.md  skillprism.yaml
npm/: README.md  checksums.json  package.json
scripts/: ci-check.sh  generate-man.sh
site/: hugo.toml
site/content/: _index.md
site/layouts/: baseof.html  home.html  index.html  list.html
site/scripts/: browser.ts  desktop-stress.ts  visual-capture.ts
src/: cli.rs  main.rs
src/builtin_harnesses/: claude.yaml  codex.yaml  factory.yaml  opencode.yaml  pi.yaml
src/distribution/: add.rs  detect.rs  install.rs  list.rs  mod.rs  network.rs  remove.rs  source.rs  update.rs
src/engine/: context.rs  helpers.rs  mod.rs
src/loader/: discover.rs  mod.rs  project.rs  skill.rs
src/registry/: mod.rs  types.rs
src/resolver/: mod.rs
src/router/: diff.rs  manifest.rs  mod.rs  overwrite.rs  paths.rs  write.rs
src/scaffold/: harness.rs  mod.rs  project.rs  skill.rs
src/state/: installed.rs  mod.rs
src/types/: error.rs  harness.rs  mod.rs  project.rs
src/validator/: macros.rs  mod.rs  spec.rs  syntax.rs  variables.rs
tests/: distribution.rs  examples.rs  integration.rs
(+56 files in other folders)
