[package]
name = "skillprism"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Build-time compiler for multi-harness agent skills"
license = "MIT"
repository = "https://github.com/tuvren/skillprism"
categories = ["development-tools", "command-line-utilities"]
keywords = ["agent", "claude", "codex", "skills", "template"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
miette = { version = "7.6", features = ["derive"] }
minijinja = { version = "2.20", features = ["json", "debug"] }
serde = { version = "1", features = ["derive"] }
similar = { version = "2.7", features = ["text"] }
thiserror = "2"
yaml_serde = "0.10"
