[package]
name = "skillprism"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Distribution CLI with per-harness templating for agent skills"
license = "Apache-2.0"
repository = "https://github.com/tuvren/skillprism"
homepage = "https://github.com/tuvren/skillprism"
documentation = "https://docs.rs/skillprism"
readme = "README.md"
categories = ["development-tools", "command-line-utilities"]
keywords = ["agent", "claude", "codex", "skills", "template"]
exclude = [".devenv/", ".direnv/", "devenv.*", "rust-toolchain.toml", "scripts/"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
ctrlc = "3.5"
dialoguer = "0.12"
miette = { version = "7.6", features = ["derive"] }
minijinja = { version = "2.20", features = ["json", "debug"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
similar = { version = "2.7", features = ["text"] }
thiserror = "2"
yaml_serde = "0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
